[tool.poetry]
name = "rlt-test"
version = "0.1.0"
description = ""
authors = ["zwickvitaly <zwickvitaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
pymongo = "^4.8.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
black = "^24.4.2"
mypy = "^1.10.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
